--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
-html {
+html, body, h1, h1, h2, h3, div, span, h4, h5, h6, button, header, head {
     padding: 0;
     margin: 0;
 }
 body {
     background: linear-gradient(210deg, #272e35, #232a33) no-repeat;
-    overflow: hidden;
+    overflow-y: hidden;
+    margin-bottom: 100%;
 }
 
 
@@ -46,7 +47,6 @@ body {
     margin-top: 100px;
     border: 1px rgb(77, 0, 0) solid;
     background-color: rgb(90, 90, 90);
-    margin-bottom: 100%;
 }
 #Click-Me:active {
     scale: 1.02;
@@ -104,23 +104,25 @@ h1, h2, h3 {
     color: #949494;
 }
 #upgrade1 {
-    margin-top: 140px;
-    position: relative;
+    margin-top: 160px;
+    position: absolute;
     right: 20px;
     height: 70px;
-    padding: 10px 90px 10px 90px;
+    justify-content: center;
 }
 #upgrade2 {
-    margin-top: 240px;
-    position: relative;
-    right: 330px;
+    margin-top: 245px;
+    position: absolute;
+    right: 20px;
     height: 70px;
-    padding: 10px 90px 10px 90px;
+    justify-content: center;
 }
 
 #Strong-Fingers, #Auto-Clicker {
     font-size: 18px;    
     color: #949494;
+    padding: 10px;
+    margin: auto;
 }
 #upgrade1:active, #upgrade2:active {
     border-bottom: 2px solid rgba(0, 0, 0, 0.589);
@@ -132,7 +134,8 @@ h1, h2, h3 {
     cursor: pointer;
     border-bottom: 3px solid rgba(155, 155, 155, 0.589);
     border-right: 2px solid rgba(155, 155, 155, 0.589);
-    border: 1px solid rgba(155, 155, 155, 0.801);
+    border-left: 1px solid rgba(155, 155, 155, 0.801);
+    border-top: 1px solid rgba(155, 155, 155, 0.801);
     transition: 0.3s;
 }
 
@@ -143,7 +146,7 @@ h1, h2, h3 {
     position: absolute;
     display: flex;
     left: 9%;
-    top: 90px;
+    top: 95px;
     height: fit-content;
     width: fit-content;
 }
@@ -205,7 +208,21 @@ h1, h2, h3 {
 }
 
 
-
+#store-title-contain {
+    border-bottom: rgba(0, 0, 0, 0.589) solid 3px;
+    height: 80px;
+    width: 350px;
+    display: flex;
+    position: absolute;
+    background-color: rgba(10, 10, 10, 0.2);
+    justify-content: center;
+    box-shadow: 0px 0px 10px 1px rgba(255, 255, 255, 0.11);
+}
+#store-title {
+    font-size: 250%;
+    margin: auto;
+    letter-spacing: 2px;
+}
 #upgrades {
     background-color: rgba(10, 10, 10, 0.4);
     height: 100%;
