--- a/style.css
+++ b/style.css
@@ -106,14 +106,14 @@ h1, h2, h3 {
 #upgrade1 {
     margin-top: 160px;
     position: absolute;
-    right: 20px;
+    right: 50px;
     height: 70px;
     justify-content: center;
 }
 #upgrade2 {
     margin-top: 245px;
     position: absolute;
-    right: 20px;
+    right: 50px;
     height: 70px;
     justify-content: center;
 }
@@ -123,6 +123,13 @@ h1, h2, h3 {
     color: #949494;
     padding: 10px;
     margin: auto;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-top: 5px;
+}
+#Auto-Clicker {
+    padding-left: 60px !important;
+    padding-right: 60px !important;
 }
 #upgrade1:active, #upgrade2:active {
     border-bottom: 2px solid rgba(0, 0, 0, 0.589);
@@ -132,12 +139,18 @@ h1, h2, h3 {
 }
 #upgrade1:hover, #upgrade2:hover {
     cursor: pointer;
-    border-bottom: 3px solid rgba(155, 155, 155, 0.589);
-    border-right: 2px solid rgba(155, 155, 155, 0.589);
-    border-left: 1px solid rgba(155, 155, 155, 0.801);
-    border-top: 1px solid rgba(155, 155, 155, 0.801);
+    border-bottom: 3px solid rgba(155, 155, 155, 0.389);
+    border-right: 2px solid rgba(155, 155, 155, 0.389);
+    border-left: 1px solid rgba(155, 155, 155, 0.601);
+    border-top: 1px solid rgba(155, 155, 155, 0.601);
     transition: 0.3s;
 }
+#price1, #price2 {
+    position: absolute;
+    margin-top: 45px;
+    font-size: larger;
+}
+
 
 
 .buy-amount {
@@ -248,5 +261,6 @@ h1, h2, h3 {
 
 .broke {
     opacity: 0.8;
-    color: rgba(167, 0, 0, 0.589);
+    color: rgba(119, 0, 0, 0.589) !important;
+    text-decoration: line-through;
 }
