--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Space+Mono&display=swap');
 :root {
     --border: rgb(128, 128, 128);
-    --color: rgb(255, 255, 151);
+    --color: rgb(212, 212, 126);
     --broke-color: rgba(168, 168, 98, 0.623);
     --sub-color: rgb(192, 192, 224);
 }
@@ -10,11 +10,11 @@ html, body {
     margin: 0;
 }
 body {
-    font-family: Roboto;
-    background: linear-gradient(150deg, rgb(20, 20, 20), rgb(50, 50, 50)) no-repeat;
+    font-family: Roboto, serif;
+    background: linear-gradient(160deg, #131313, #131313) no-repeat;
     background-size: cover;
     overflow: hidden;
-    color: rgb(255, 255, 151);
+    color: var(--color);
 }
 h1, h2, h3, h4, h5, h6 {
     cursor: default;
@@ -28,5 +28,8 @@ h1, h2, h3, h4, h5, h6 {
 .broke {
     color: var(--broke-color);
     text-decoration: line-through;
-    opacity: 0.9;
+    opacity: 0.5;
+}
+.broke:hover {
+    cursor: default;
 }
