--- a/LeftSide.css
+++ b/LeftSide.css
@@ -1,8 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Space+Mono&display=swap');
 :root {
     --border: rgb(128, 128, 128);
-    --color: rgb(255, 255, 151);
-    --broke-color: rgba(168, 168, 98, 0.623);
+    --color: rgb(212, 212, 126);
 }
 .window {
     padding: 10px;
@@ -22,6 +21,7 @@
     color: var(--color);
     background-color: rgba(26, 26, 26, 0.613);
     backdrop-filter: blur(8px);
+    -webkit-backdrop-filter: blur(8px);
     z-index: 2;
 }
 #settingButton {
@@ -67,18 +67,9 @@
     height: fit-content;
     border: 1px solid var(--border);
     border-radius: 16px;
-    box-shadow: 0px 10px 20px 10px rgba(255, 198, 198, 0.041);
+    box-shadow: 0px 10px 20px 10px #f9f97107;
     margin-top: 20px;
     margin-left: 20px;
-}
-#LeftSide {
-    height: 100%;
-    background: linear-gradient(180deg, rgba(75, 75, 75, 0.445), rgba(23, 23, 23, 0.414));
-    width: 350px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    border-right: 2px solid var(--border);
 }
 #minigame-title {
     margin: auto;
