--- a/menu.css
+++ b/menu.css
@@ -1,8 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Space+Mono&display=swap');
 :root {
     --border: rgb(128, 128, 128);
-    --color: rgb(255, 255, 151);
-    --broke-color: rgba(168, 168, 98, 0.623);
+    --color: rgb(212, 212, 126);
     --sub-color: rgb(192, 192, 224);
 }
 #menuTitle {
@@ -28,6 +27,7 @@
     border-radius: 16px;
     background-color: rgba(66, 66, 66, 0.213);
     backdrop-filter: blur(2px);
+    -webkit-backdrop-filter: blur(2px);
 }
 .setting {
     padding: 15px 50px 15px 50px;
@@ -38,6 +38,7 @@
     color: var(--color);
     background-color: rgba(26, 26, 26, 0.613);
     backdrop-filter: blur(8px);
+    -webkit-backdrop-filter: blur(8px);
     z-index: 2;
     width: 200px !important;
 }
@@ -47,7 +48,7 @@
     right: 0;
     margin-left: auto;
     margin-right: auto;
-    color: rgba(255, 255, 151, 0.709);
+    color: var(--color);
 }
 #minigameButton {
     top: 380px;
@@ -55,7 +56,7 @@
     right: 0;
     margin-left: auto;
     margin-right: auto;
-    color: rgba(255, 255, 151, 0.709);
+    color: var(--color);
 
 }
 #statButton {
@@ -64,7 +65,7 @@
     right: 0;
     margin-left: auto;
     margin-right: auto;
-    color: rgba(255, 255, 151, 0.709);
+    color: var(--color);
 
 }
 #closeButton {
@@ -98,7 +99,7 @@
     height: fit-content;
     border: 1px solid var(--border);
     border-radius: 16px;
-    box-shadow: 0px 10px 20px 10px rgba(255, 198, 198, 0.041);
+    box-shadow: 0px 10px 20px 10px #f9f97107;
     margin-top: 20px;
     margin-left: 20px;
 }
