--- a/menu.css
+++ b/menu.css
@@ -3,12 +3,13 @@
     --border: rgb(128, 128, 128);
     --color: rgb(212, 212, 126);
     --sub-color: rgb(192, 192, 224);
+    --dark-color: rgb(184, 185, 114);
 }
 #menuTitle {
     position: fixed;
     top: 205px;
     font-size: larger;
-    left: 46.6%;
+    left: calc(50% - 49px);
     z-index: 3;
     text-decoration: underline;
 }
@@ -25,9 +26,9 @@
     margin-left: auto;
     margin-right: auto;
     border-radius: 16px;
-    background-color: rgba(66, 66, 66, 0.213);
-    backdrop-filter: blur(2px);
+    background-color: rgba(43, 43, 43, 0.658);
     -webkit-backdrop-filter: blur(2px);
+    backdrop-filter: blur(2px);
 }
 .setting {
     padding: 15px 50px 15px 50px;
@@ -37,8 +38,8 @@
     border: none;
     color: var(--color);
     background-color: rgba(26, 26, 26, 0.613);
-    backdrop-filter: blur(8px);
-    -webkit-backdrop-filter: blur(8px);
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
     z-index: 2;
     width: 200px !important;
 }
@@ -57,7 +58,6 @@
     margin-left: auto;
     margin-right: auto;
     color: var(--color);
-
 }
 #statButton {
     top: 460px;
@@ -66,7 +66,6 @@
     margin-left: auto;
     margin-right: auto;
     color: var(--color);
-
 }
 #closeButton {
     top: 540px;
@@ -118,8 +117,17 @@
     font-size: 38px;
 }
 #stat {
-    position: absolute;
-    left: 40%;
-    top: 35%;
     z-index: 5;
+    padding: 5px;
+}
+#statContainer {
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    top: 30%;
+    z-index: 2;
+    color: var(--dark-color)
 }
