--- a/upgrade.css
+++ b/upgrade.css
@@ -23,6 +23,17 @@
     margin-top: 30px;
     box-shadow: 0px 10px 20px 10px #f9f97107;
 }
+.upgradeContainer {
+    display: flex;
+    width: fit-content;
+    height: fit-content;
+    min-width: 200px;
+    min-height: 90px;
+    margin: 0 auto;
+    border: 1px solid rgba(162, 162, 162, 0.753);
+    border-radius: 16px;
+    margin-top: 30px;
+}
 #upgrade-title {
     margin: auto;
     padding: 15px 20px 15px 20px;
