--- a/menu.css
+++ b/menu.css
@@ -6,12 +6,15 @@
     --dark-color: rgb(184, 185, 114);
 }
 #menuTitle {
-    position: fixed;
-    top: 205px;
     font-size: larger;
-    left: calc(50% - 49px);
     z-index: 3;
     text-decoration: underline;
+    position: absolute;
+    height: auto;
+    width: fit-content;
+    top: 21%;
+    left: 50%;
+    transform: translateX(-50%);
 }
 .window {
     padding: 200px 150px 250px 150px;
@@ -130,4 +133,19 @@
     top: 30%;
     z-index: 2;
     color: var(--dark-color)
+}
+#settingContainer {
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    top: 30%;
+    z-index: 2;
+    color: var(--dark-color)
+}
+#setting {
+    z-index: 5;
+    padding: 5px;
 }
