--- a/css/heads-or-tails.css
+++ b/css/heads-or-tails.css
@@ -26,12 +26,11 @@
     text-align: center;
     padding: 3px;
     border: 1px solid var(--border);
-    box-shadow: 0px 0px 10px 0px rgba(214, 214, 115, 0.35);
     margin: 12px;
 }
 .coin:hover {
     opacity: 0.6;
-    box-shadow: 0px 0px 8px 0px rgba(214, 214, 115, 0.25);
+    box-shadow: 0px 0px 8px 0px rgba(214, 214, 115, 0.225);
     transition: 0.1s;
     cursor: pointer;
 }
@@ -66,3 +65,24 @@
     margin-top: 5px;
     scale: 1.2;
 }
+#insufficientFunds {
+    color: rgb(143, 45, 45);
+    font-size: small;
+    display: flex;
+    margin-left: 150px;
+    position: absolute;
+    top: 52%;
+}
+.minigameSelected {
+    scale: 1.07;
+    box-shadow: 0px 0px 10px 0px rgba(214, 214, 115, 0.35);
+}
+.minigameSelected:hover {
+    scale: 1.03 !important;
+    box-shadow: 0px 0px 10px 0px rgba(214, 214, 115, 0.35) !important;
+    cursor: default !important;
+}
+.win {
+    color: rgba(40, 107, 40, 0.904) !important;
+}
+
