--- a/css/heads-or-tails.css
+++ b/css/heads-or-tails.css
@@ -78,7 +78,8 @@
     box-shadow: 0px 0px 10px 0px rgba(214, 214, 115, 0.35);
 }
 .minigameSelected:hover {
-    scale: 1.03 !important;
+    scale: 1.07 !important;
+    opacity: 1 !important;
     box-shadow: 0px 0px 10px 0px rgba(214, 214, 115, 0.35) !important;
     cursor: default !important;
 }
