--- a/css/menu.css
+++ b/css/menu.css
@@ -12,9 +12,12 @@
     position: absolute;
     height: auto;
     width: fit-content;
-    top: 21%;
+    top: 26%;
     left: 50%;
     transform: translateX(-50%);
+}
+#menuH1 {
+    margin: 0;
 }
 .window {
     padding: 200px 150px 250px 150px;
@@ -22,7 +25,7 @@
     width: fit-content;
     height: fit-content;
     position: fixed;
-    top: 200px;
+    top: 23%;
     z-index: 2;
     left: 0;
     right: 0;
@@ -168,6 +171,8 @@
     transition: 0.1s;
 }
 #websiteTitleValue {
+    margin-top: 15px;
+    margin-bottom: 15px;
     background-color: rgba(206, 206, 206, 0.767);
     border: var(--border);
     border-radius: 5px;
