--- a/css/minigames/spinner.css
+++ b/css/minigames/spinner.css
@@ -6,7 +6,7 @@
 }
 #spinnerDiv {
     width: 310px;
-    height: 430px;
+    height: 450px;
     border: 1px solid var(--border);
     border-radius: 15px;
     margin: 20px auto;
@@ -15,9 +15,16 @@
     width: 270px;
     margin: 10px 0px;
     border-bottom: 1px solid var(--border);
-    padding-left: 15px;
-    padding-right: 26px;
+    padding-left: 20px;
+    padding-right: 21px;
     margin-bottom: 0;
+}
+#spinnerImg2 {
+    width: 60px;
+    transform: rotate(180deg);
+    left: 42%;
+    top: 83.5%;
+    position: absolute;
 }
 #optionsDiv2 {
     top: 0;
@@ -49,7 +56,23 @@
     border-radius: 5px;
     align-content: center;
 }
+#numberSelectButton {
+    padding: 4px;
+    font-size: 14px;
+    border: 1px solid var(--border);
+    width: 40px;
+    height: 20px;
+    align-items: center;
+    text-align: center;
+    border-radius: 5px;
+    align-content: center;
+}
 #betButton2:hover {
+    opacity: 0.6;
+    transition: 0.1s;
+    cursor: pointer;
+}
+#numberSelectButton:hover {
     opacity: 0.6;
     transition: 0.1s;
     cursor: pointer;
@@ -59,7 +82,7 @@
     gap: 5px;
     position: absolute;
     left: 150px;
-    top: 445px;
+    top: 50.4%;
     margin-top: 430px;
     scale: 1.2;
 }
@@ -69,5 +92,12 @@
     display: flex;
     margin-left: 150px;
     position: absolute;
-    top: 52%;
+    top: 97.5%;
+}
+#number {
+    background-color: rgba(206, 206, 206, 0.767);
+    border: 2px solid rgba(182, 119, 38, 0.603);
+    border-radius: 5px;
+    height: 15px;
+    width: 60px;
 }
