--- a/css/minigames/spinner.css
+++ b/css/minigames/spinner.css
@@ -14,7 +14,6 @@
 #spinnerImg {
     width: 270px;
     margin: 10px 0px;
-    border-bottom: 1px solid var(--border);
     padding-left: 20px;
     padding-right: 21px;
     margin-bottom: 0;
@@ -23,12 +22,16 @@
     width: 60px;
     transform: rotate(180deg);
     left: 42%;
-    top: 798px;
+    top: 790px;
     position: absolute;
 }
 #optionsDiv2 {
     top: 0;
     margin: 0;
+    margin-top: 10px;
+    padding-top: 5px;
+    padding-bottom: 10px;
+    border-top: 1px solid var(--border);
 }
 #red {
     background-color: rgba(255, 0, 0, 0.477);
@@ -82,7 +85,7 @@
     gap: 5px;
     position: absolute;
     left: 150px;
-    top: 490px;
+    top: 485px;
     margin-top: 430px;
     scale: 1.2;
 }
@@ -101,6 +104,7 @@
     height: 15px;
     width: 60px;
 }
+
 .blue1 {
     animation: blue1 3s linear;
     
