--- a/css/minigames/spinner.css
+++ b/css/minigames/spinner.css
@@ -85,7 +85,7 @@
     gap: 5px;
     position: absolute;
     left: 150px;
-    top: 485px;
+    top: 483px;
     margin-top: 430px;
     scale: 1.2;
 }
@@ -95,7 +95,7 @@
     display: flex;
     margin-left: 150px;
     position: absolute;
-    top: 900px;
+    top: 942px;
 }
 #number {
     background-color: rgba(206, 206, 206, 0.767);
@@ -114,16 +114,24 @@
         transform: rotate(0deg);
         border: 0px;
     }
-    60% {
-        transform: rotate(360deg);
+    40% {
+        transform: rotate(500deg);
+        border: 0px;
+    }
+    50% {
+        transform: rotate(550deg);
+        border: 0px;
+    }
+    65% {
+        transform: rotate(595deg);
         border: 0px;
     }
     80% {
-        transform: rotate(380deg);
+        transform: rotate(620deg);
         border: 0px;
     }
     100% {
-        transform: rotate(380deg);
+        transform: rotate(620deg);
         border: 0px;
     }
 }
