--- a/css/minigames/heads-or-tails.css
+++ b/css/minigames/heads-or-tails.css
@@ -71,7 +71,7 @@
     display: flex;
     margin-left: 150px;
     position: absolute;
-    top: 52%;
+    top: 480px;
 }
 .minigameSelected {
     scale: 1.07;
